first line six img

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 </head>
 <body>
     <section id="sony-header">
-        <div class="row">
-            <div class="col-12">
-                <img src="img/sony_logo.svg" alt="sony logo" class="my_sony-logo">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <img src="img/sony_logo.svg" alt="sony logo" class="my_sony-logo">
+                </div>
             </div>
         </div>
     </section>
@@ -70,7 +72,64 @@
                 </div>
             </div>
           </nav>
+    </section>
 
+    <section>
+        <div class="returnal_jumbo container-fluid mb-3">
+            <div class="row">
+                <div class="col-12">
+                    <div class="returnal-bootstrap-box text-white">
+                       <div id="jumbo_bg">
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="img/returnal-hero-banner-logo.png" alt="" id="returnal_logo">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <h1>Rompi il cerchio</h1>
+                                <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5.</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="input-group">
+                                    <button class="btn btn btn-danger" type="button" id="button-addon1">Acquista ora</button>
+                                </div>
+                            </div>
+                        </div>
+                       </div>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </section>   
+
+
+    <section id="portfolio">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="ret_little square-box rounded"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="ratchet_little square-box rounded"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="ret_little square-box rounded"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="ratchet_little square-box rounded"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="ret_little square-box rounded"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="ratchet_little square-box rounded"></div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
