--- a/index.html
+++ b/index.html
@@ -106,27 +106,82 @@
     </section>   
 
 
-    <section id="portfolio">
+    <section>
         <div class="container">
 
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-2">
+            <div class="row gy-3 mb-5">
+                <div class="col-6 col-md-4 col-lg-2">
                     <div class="ret_little square-box rounded"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-2">
+                <div class="col-6 col-md-4 col-lg-2">
                     <div class="ratchet_little square-box rounded"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-2">
+                <div class="col-6 col-md-4 col-lg-2">
                     <div class="ret_little square-box rounded"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-2">
+                <div class="col-6 col-md-4 col-lg-2">
                     <div class="ratchet_little square-box rounded"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-2">
+                <div class="col-6 col-md-4 col-lg-2">
                     <div class="ret_little square-box rounded"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-2">
+                <div class="col-6 col-md-4 col-lg-2">
                     <div class="ratchet_little square-box rounded"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row text-center ">
+                <div class="col-12">
+                    <p>Play has no limits</p>
+                    <h1>Ecco la PlayStation 5</h1>
+                    <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row d-flex align-items-center">
+                <div class="col-6">
+                    <h1>Console PlayStation 5</h1>
+                    <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
+                    <div class="input-group">
+                        <button class="btn btn btn-primary" type="button" id="button-addon1">Maggiori informazioni</button>
+                    </div>
+                </div>
+            
+                <div class="col-6">
+                    <div>
+                        <img src="img/playstation-5-thumb.png" alt="" class="play_thumb">
+                    </div>
+                </div>
+            </div>   
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+
+            <div class="row gy-3 mb-5">
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div id="console" class="square-box rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div id="controller" class="square-box rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div id="cuffie_wireless" class="square-box rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div id="tel_media" class="square-box rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div id="telecamera" class="square-box rounded"></div>
                 </div>
             </div>
         </div>
