change jumbo size

--- a/index.html
+++ b/index.html
@@ -75,24 +75,13 @@
     </section>
 
     <section>
-        <div class="returnal_jumbo container-fluid mb-3">
+        <div id="jumbo_bg" class="returnal_jumbo container-fluid mb-3">
             <div class="row">
                 <div class="col-12">
                     <div class="returnal-bootstrap-box text-white">
-                       <div id="jumbo_bg">
-                        <div class="row">
-                            <div class="col-12">
-                                <img src="img/returnal-hero-banner-logo.png" alt="" id="returnal_logo">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <h1>Rompi il cerchio</h1>
-                                <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5.</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
+                            <img src="img/returnal-hero-banner-logo.png" alt="" id="returnal_logo">
+                            <h1>Rompi il cerchio</h1>
+                            <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5.</p>
                                 <div class="input-group">
                                     <button class="btn btn btn-danger" type="button" id="button-addon1">Acquista ora</button>
                                 </div>
@@ -183,6 +172,7 @@
                 <div class="col-6 col-md-4 col-lg-2">
                     <div id="telecamera" class="square-box rounded"></div>
                 </div>
+
             </div>
         </div>
     </section>
