--- a/index.html
+++ b/index.html
@@ -78,16 +78,13 @@
         <div id="jumbo_bg" class="returnal_jumbo container-fluid mb-3">
             <div class="row">
                 <div class="col-12">
-                    <div class="returnal-bootstrap-box text-white">
-                            <img src="img/returnal-hero-banner-logo.png" alt="" id="returnal_logo">
-                            <h1>Rompi il cerchio</h1>
-                            <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5.</p>
-                                <div class="input-group">
-                                    <button class="btn btn btn-danger" type="button" id="button-addon1">Acquista ora</button>
-                                </div>
-                            </div>
+                    <div class="returnal-bootstrap-box text-white ">
+                        <img src="img/returnal-hero-banner-logo.png" alt="" id="returnal_logo">
+                        <h1>Rompi il cerchio</h1>
+                        <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5.</p>
+                        <div class="input-group">
+                            <button class="btn btn btn-danger" type="button" id="button-addon1">Acquista ora</button>
                         </div>
-                       </div>
                     </div>
                 </div>
             </div>
@@ -97,7 +94,6 @@
 
     <section>
         <div class="container">
-
             <div class="row gy-3 mb-5">
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="ret_little square-box rounded"></div>
@@ -135,7 +131,7 @@
 
     <section>
         <div class="container">
-            <div class="row d-flex align-items-center">
+            <div class="row d-flex align-items-center mb-5">
                 <div class="col-6">
                     <h1>Console PlayStation 5</h1>
                     <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
@@ -157,7 +153,7 @@
         <div class="container">
 
             <div class="row gy-3 mb-5">
-                <div class="col-6 col-md-4 col-lg-2">
+                <div class="col-6 col-md-4 col-lg-2 offset-1">
                     <div id="console" class="square-box rounded"></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
@@ -177,6 +173,23 @@
         </div>
     </section>
 
+    
+    <section>
+        <div id="it_takes-two" class="returnal_jumbo container-fluid mb-3">
+            <div class="row">
+                <div class="col-12">
+                    <div class="returnal-bootstrap-box text-white ">
+                        <img src="img/it-takes-two-logo.png" alt="" id="returnal_logo">
+                        <h1>Un'avventura cooperativa selvaggia ti attende</h1>
+                        <p>Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                        <div class="input-group">
+                            <button class="btn btn btn-danger" type="button" id="button-addon1">Acquista ora</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </section> 
 
 </body>
 </html>
