nuove uscite + square-box size

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
     <section>
         <div id="jumbo_bg" class="returnal_jumbo container-fluid mb-3">
-            <div class="row">
+            <div class="row ">
                 <div class="col-12">
-                    <div class="returnal-bootstrap-box text-white ">
+                    <div class="returnal-bootstrap-box text-white px-4 align-text-bottom">
                         <img src="img/returnal-hero-banner-logo.png" alt="" id="returnal_logo">
                         <h1>Rompi il cerchio</h1>
                         <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5.</p>
@@ -151,31 +151,31 @@
 
     <section>
         <div class="container">
-
-            <div class="row gy-3 mb-5">
-                <div class="col-6 col-md-4 col-lg-2 offset-1">
-                    <div id="console" class="square-box rounded"></div>
+            <div class="image_border">
+                <div class="row gy-3 mb-5">
+                    <div class="col-6 col-md-4 col-lg-2 offset-1">
+                        <div id="console" class="square-box rounded"></div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2">
+                        <div id="controller" class="square-box rounded"></div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2">
+                        <div id="cuffie_wireless" class="square-box rounded"></div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2">
+                        <div id="tel_media" class="square-box rounded"></div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2">
+                        <div id="telecamera" class="square-box rounded"></div>
+                    </div>
                 </div>
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div id="controller" class="square-box rounded"></div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div id="cuffie_wireless" class="square-box rounded"></div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div id="tel_media" class="square-box rounded"></div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-2">
-                    <div id="telecamera" class="square-box rounded"></div>
-                </div>
-
-            </div>
+            </div>   
         </div>
     </section>
 
     
-    <section>
-        <div id="it_takes-two" class="returnal_jumbo container-fluid mb-3">
+    <section class="mb-0">
+        <div id="it_takes-two" class="returnal_jumbo container-fluid">
             <div class="row">
                 <div class="col-12">
                     <div class="returnal-bootstrap-box text-white ">
@@ -190,6 +190,63 @@
             </div>
         </div>  
     </section> 
+
+    <section id="bg_nuove-uscite">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-12">
+                    <h1>Nuove uscite</h1>
+                    <h2>Giochi incredibili per PS4 e PS5 disponibili ora</h2>
+                </div>
+            </div> 
+        </div>  
+
+        <div  class="container">
+            <div class="row gy-3 mb-5">
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="tony_hawks square-box_ps4 rounded"> </div>
+                    <p>Tony Hawk's Pro Skater 1-2</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="tony_hawks square-box_ps4 rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="tony_hawks square-box_ps4 rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                </div>
+            </div>
+            <div class="row gy-3 mb-5">
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="tony_hawks square-box_ps4 rounded"> </div>
+                    <p>Tony Hawk's Pro Skater 1-2</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="tony_hawks square-box_ps4 rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="tony_hawks square-box_ps4 rounded"></div>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2">
+                    <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                </div>
+            </div>
+        </div>
+        
+    </section>
 
 </body>
 </html>
