--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <section>
         <div id="jumbo_bg" class="returnal_jumbo container-fluid mb-3">
             <div class="row ">
-                <div class="col-12">
+                <div class="col-12 col-lg-4">
                     <div class="returnal-bootstrap-box text-white px-4 align-text-bottom">
-                        <img src="img/returnal-hero-banner-logo.png" alt="" id="returnal_logo">
+                        <img src="img/returnal-hero-banner-logo.png" alt="" class="returnal_logo">
                         <h1>Rompi il cerchio</h1>
                         <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponivile in esclusiva su PS5.</p>
                         <div class="input-group">
@@ -177,9 +177,9 @@
     <section class="mb-0">
         <div id="it_takes-two" class="returnal_jumbo container-fluid">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-lg-4">
                     <div class="returnal-bootstrap-box text-white ">
-                        <img src="img/it-takes-two-logo.png" alt="" id="returnal_logo">
+                        <img src="img/it-takes-two-logo.png" alt="" class="returnal_logo">
                         <h1>Un'avventura cooperativa selvaggia ti attende</h1>
                         <p>Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
                         <div class="input-group">
@@ -246,6 +246,78 @@
             </div>
         </div>
         
+    </section>
+
+    <section>
+        <div class="container mb-5">
+            <div class="row text-center ">
+                <div class="col-6 offset-3">
+                    <h1>Esplora PlayStation 4</h1>
+                    <p>Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="container mb-3">
+            <div class="row ">
+                <div class="col-12 col-lg-4">
+                    <div class="px-4">
+                        <img src="img/ps4-slim-homepage-image-block.jpg" alt="" class="returnal_logo">
+                        <h1>PlayStation 4</h1>
+                        <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+                        <div class="input-group">
+                            <button class="btn btn btn-danger" type="button" id="button-addon1">Scopri di più</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-4">
+                    <div class="px-4">
+                        <img src="img/double11-202010-tw-psvr.jpg" alt="" class="returnal_logo">
+                        <h1>PlayStation VR</h1>
+                        <p>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                        <div class="input-group">
+                            <button class="btn btn btn-danger" type="button" id="button-addon1">Scopri di più</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-4">
+                    <div class="px-4">
+                        <img src="img/dualshock-4-listing-thumb.jpg" alt="" class="returnal_logo">
+                        <h1>Accessori</h1>
+                        <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                        <div class="input-group">
+                            <button class="btn btn btn-danger" type="button" id="button-addon1">Scopri di più</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </section>  
+
+    
+    <section>
+        <div id="soulstorm" class="returnal_jumbo container-fluid mb-3">
+            <div class="row">
+                <div class="col-6 col-lg-6">
+                    <div class="soulstorm-box px-4">
+                        <img src="img/ps-plus-logo.png" alt="" class="returnal_logo">
+                        <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                        <div class="input-group">
+                            <button class="btn btn btn-secondary" type="button" id="button-addon1">Esplora PlayStation Plus</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-6">
+                    <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="" class="play_thumb">
+                </div>
+            </div>
+        </div>  
     </section>
 
 </body>
