--- a/index.html
+++ b/index.html
@@ -320,5 +320,80 @@
         </div>  
     </section>
 
+    <section>
+        <div class="container mb-5">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h1>Nuovi sconti sul PlayStation Store</h1>
+                    <p>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Sezione sconti-->
+    <section>
+        <div class="container mb-5">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div id="giochi_a_meno" class="square_box_big"></div>
+                </div>
+                <div class="col-lg-4">
+                    <div id="week_gold" class="square_box_big"></div>
+                </div>
+                <div class="col-lg-4">
+                    <div id="free_to_play" class="square_box_big"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div id="avengers" class="returnal_jumbo container-fluid mb-3">
+            <div class="row">
+                <div class="col-6 col-lg-6">
+                    <div class="soulstorm-box text-white px-4">
+                        <img src="img/ps-now-logo-two-column.png" alt="" class="returnal_logo">
+                        <p>Ottieni l'accesso immediato a una vastatissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+                        <div class="input-group">
+                            <button class="btn btn btn-secondary" type="button" id="button-addon1">Esplora PlayStation Now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-6">
+                    <img src="img/ps-now-april-featured-image-block.png" alt="" class="play_thumb">
+                </div>
+            </div>
+        </div>  
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h1>Seguici sui social media</h1>
+                </div>
+            </div>
+        </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-1 col-6 offset-4">
+                        <div id="twitter" class="square-box-social"></div>
+                    </div>
+                    <div class="col-lg-1 col-6">
+                        <div id="facebook" class="square-box-social"></div>
+                    </div>
+                    <div class="col-lg-1 col-6">
+                        <div id="instagram" class="square-box-social"></div>
+                    </div>
+                    <div class="col-lg-1 col-6">
+                        <div id="you_tube" class="square-box-social"></div>
+                    </div>
+                </div>   
+            </div>
+    </section>
+
 </body>
 </html>
