--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
     </section>
 
+    <!-- Navbar -->
     <section id="navbar">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -259,7 +260,6 @@
         </div>
     </section>
 
-
     <section>
         <div class="container mb-3">
             <div class="row ">
@@ -393,6 +393,10 @@
                     </div>
                 </div>   
             </div>
+    </section>
+
+    <section>
+        
     </section>
 
 </body>
