ul navbar + sony logo padding

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
     <title>Playstation</title>
 </head>
 <body>
-    <section id="sony-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <img src="img/sony_logo.svg" alt="sony logo" class="my_sony-logo">
-                </div>
-            </div>
-        </div>
+    <section>
+        <div id="sony-header">
+            <a href="">
+                <img src="img/sony_logo.svg" alt="sony logo" class="my_sony-logo">
+            </a>
+        </div>    
     </section>
 
     <!-- Navbar -->
@@ -61,16 +59,16 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Supporto
                         </a>
-                 </li>
+                    </li>
                 </ul>
-                
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll justify-content-end flex-grow-1">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Fai acquisti
                         </a>
-                    </li>   
+                    </li>
+                </ul>   
                   <button class="btn btn-secondary" type="submit">Accedi</button>
-                </div>
             </div>
           </nav>
     </section>
@@ -396,7 +394,7 @@
     </section>
 
     <section>
-        
+
     </section>
 
 </body>
