--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title>Playstation</title>
 </head>
 <body>
+
+    <!--Sony logo-->
     <section>
         <div id="sony-header">
             <a href="">
@@ -73,8 +75,9 @@
           </nav>
     </section>
 
-    <section>
-        <div id="jumbo_bg" class="returnal_jumbo container-fluid mb-3">
+    <!--Jumbo-->
+    <section id="jumbo_bg" class="mb-5">
+        <div class="returnal_jumbo container">
             <div class="row ">
                 <div class="col-12 col-lg-4">
                     <div class="returnal-bootstrap-box text-white px-4 align-text-bottom">
@@ -173,8 +176,8 @@
     </section>
 
     
-    <section class="mb-0">
-        <div id="it_takes-two" class="returnal_jumbo container-fluid">
+    <section class="mb-0" id="it_takes-two">
+        <div  class="returnal_jumbo container">
             <div class="row">
                 <div class="col-12 col-lg-4">
                     <div class="returnal-bootstrap-box text-white ">
@@ -191,7 +194,7 @@
     </section> 
 
     <section id="bg_nuove-uscite">
-        <div class="container">
+        <div class="container text-white">
             <div class="row mb-5">
                 <div class="col-12">
                     <h1>Nuove uscite</h1>
@@ -200,7 +203,7 @@
             </div> 
         </div>  
 
-        <div  class="container">
+        <div  class="container text-white">
             <div class="row gy-3 mb-5">
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="tony_hawks square-box_ps4 rounded"> </div>
@@ -208,39 +211,49 @@
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                    <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="tony_hawks square-box_ps4 rounded"></div>
+                    <p>Tony Hawk's Pro Skater 1-2</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                    <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="tony_hawks square-box_ps4 rounded"></div>
+                    <p>Tony Hawk's Pro Skater 1-2</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                    <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
             </div>
             <div class="row gy-3 mb-5">
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="tony_hawks square-box_ps4 rounded"> </div>
                     <p>Tony Hawk's Pro Skater 1-2</p>
-                </div>
+                </div>    
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                    <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="tony_hawks square-box_ps4 rounded"></div>
+                    <p>Tony Hawk's Pro Skater 1-2</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                    <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="tony_hawks square-box_ps4 rounded"></div>
+                    <p>Tony Hawk's Pro Skater 1-2</p>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2">
                     <div class="crash_bandicoot square-box_ps4 rounded"></div>
+                    <p>Crash Bandicoot 4: It's About Time</p>
                 </div>
             </div>
         </div>
@@ -298,8 +311,8 @@
     </section>  
 
     
-    <section>
-        <div id="soulstorm" class="returnal_jumbo container-fluid mb-3">
+    <section id="soulstorm">
+        <div  class="returnal_jumbo container mb-3">
             <div class="row">
                 <div class="col-6 col-lg-6">
                     <div class="soulstorm-box px-4">
