--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             </div>
         </div>
             <div class="container">
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col-lg-1 col-6 offset-4">
                         <div id="twitter" class="square-box-social"></div>
                     </div>
@@ -406,7 +406,47 @@
             </div>
     </section>
 
-    <section>
+    <section id="footer_bg">
+        <div class="container">
+            <div class="row text-white ">
+                <div class="col-6">
+                    <i class="fab fa-playstation"></i>
+                    <p>Country/ Region: Italy</p>
+                </div>
+
+                <div class="col-lg-6 col-md-12 d-flex bd-highlight justify-content-evenly">
+                    <ul class="list_footer">
+                        <li class="text-decoration-none">Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                    </ul>
+                
+                    <ul class="list_footer">
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                    </ul>
+
+                    <ul class="list_footer">
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                        <li>Link footer n</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row text-white">
+                <div class="col-6">
+                    <p>Website Sony Interactive Entertainemnt Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. Maggiori info</p>
+                </div>
+            </div>
+        </div>
 
     </section>
 
