--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     </section>   
 
 
+    <!--quadrati sotto jumbo -->
     <section>
         <div class="container">
             <div class="row gy-3 mb-5">
@@ -314,7 +315,7 @@
     <section id="soulstorm">
         <div  class="returnal_jumbo container mb-3">
             <div class="row">
-                <div class="col-6 col-lg-6">
+                <div class="col-md-6 col-lg-6">
                     <div class="soulstorm-box px-4">
                         <img src="img/ps-plus-logo.png" alt="" class="returnal_logo">
                         <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
@@ -324,7 +325,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-lg-6">
+                <div class="col-lg-6 col-md-6 d-md-block d-none">
                     <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="" class="play_thumb">
                 </div>
             </div>
@@ -345,7 +346,7 @@
     <!--Sezione sconti-->
     <section>
         <div class="container mb-5">
-            <div class="row">
+            <div class="row gy-3">
                 <div class="col-lg-4">
                     <div id="giochi_a_meno" class="square_box_big"></div>
                 </div>
@@ -360,10 +361,11 @@
     </section>
 
 
+    <!--PlayStation Now-->
     <section>
         <div id="avengers" class="returnal_jumbo container-fluid mb-3">
             <div class="row">
-                <div class="col-6 col-lg-6">
+                <div class="col-md-6 col-lg-6">
                     <div class="soulstorm-box text-white px-4">
                         <img src="img/ps-now-logo-two-column.png" alt="" class="returnal_logo">
                         <p>Ottieni l'accesso immediato a una vastatissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
@@ -373,7 +375,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-lg-6">
+                <div class="col-lg-6 col-md-6 d-md-block d-none">
                     <img src="img/ps-now-april-featured-image-block.png" alt="" class="play_thumb">
                 </div>
             </div>
@@ -390,7 +392,7 @@
         </div>
             <div class="container">
                 <div class="row mb-5">
-                    <div class="col-lg-1 col-6 offset-4">
+                    <div class="col-lg-1 col-6 offset-lg-4">
                         <div id="twitter" class="square-box-social"></div>
                     </div>
                     <div class="col-lg-1 col-6">
